<resources>
    <string name="app_name">MyRestaurantApp</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mc_donalds">Mc Donalds</string>
    <string name="kfc">KFC</string>
    <string name="papajohns">Papa Johns</string>
    <string name="guest">Qonaq</string>
    <string name="guest_message">Yeməkdən zövq al!</string>
    <string name="reyting">Reyting\n</string>
    <string name="kateqoriyalar">Kategoriyalar</string>
    <string name="search">Searh for food</string>
    <string name="mevcud_konum">Konum\n</string>
    <string name="baki_azerbaijan">Baki,Azerbaijan</string>
    <string name="welcome">Xoş Gəlmisiniz!</string>
    <string name="most_fauvorites">Ən bəyənilənlər</string>
    <string name="more">Ətraflı</string>
    <string name="todo">TODO</string>
    <string name="Perfect">Əla</string>
    <string name="Time">10 min</string>
    <string name="profile">Profile</string>
    <string name="forget_pass">Şifrəni unutdun?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant">Sahibkar</string>
    <string name="main_page">Main Page</string>
    <string name="register">Qeydiyyat</string>
    <string name="signUp">Sign up</string>
</resources>